--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": 12345678,
+    "password": "12345678",
     "database": "ans-proj",
     "host": "localhost",
     "dialect": "mysql"
