--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "migrate": "migrate",
+    "build": "sequelize db:migrate --env production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
