--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
   },
   "homepage": "https://github.com/Talhaanwerr/Ans-Proj#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.186.0",
+    "@aws-sdk/s3-request-presigner": "^3.186.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-busboy": "^9.0.0",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.2"
