--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@aws-sdk/client-s3": "^3.186.0",
     "@aws-sdk/s3-request-presigner": "^3.186.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-busboy": "^9.0.0",
+    "express-formidable": "^1.2.0",
     "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
